--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -149,65 +149,65 @@
     z-index: 10;
 }
 .fade-in-nav + .content-containers {
-    padding-top: 60px;
+    padding-top: 40px;
 }
 
 .progress {
-    height: 1.5rem;
-    font-size: 1rem;
+    height: 1.4rem;
+    font-size: 1.4rem;
 }
 
 .gtfinder { 
     background-image: url("../img/githubFinder.png");
-    border-radius: 25px;
+    border-radius: 15px;
     height: 400px; 
-    width: 600px;
+    width: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 4px solid black;
+    border: 1px solid black;
 }
 
 .conkeeper { 
     background-image: url("../img/contactKeeper.png");
-    border-radius: 25px;
+    border-radius: 15px;
     height: 400px; 
-    width: 600px;
+    width: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 4px solid black;
+    border: 1px solid black;
 }
 .itlogger { 
     background-image: url("../img/it-logger.png");
-    border-radius: 25px;
+    border-radius: 15px;
     height: 400px;
-    width: 600px; 
+    width: 300px; 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 4px solid black;
+    border: 1px solid black;
 }
 .pos { 
     background-image: url("../img/pointOfSale.png");
-    border-radius: 25px;
+    border-radius: 15px;
     height: 400px;
-    width: 600px;
+    width: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 4px solid black;
+    border: 1px solid black;
 }
 
 .lottery { 
-    background-image: url("../img/Lottery.png");
-    border-radius: 25px;
+    background-image: url("../img/Lottery.jpg");
+    border-radius: 15px;
     height: 400px;
-    width: 600px;
+    width: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 4px solid black;
+    border: 1px solid black;
 }
 
 .mytext {
@@ -252,23 +252,23 @@
 }
 
 .project-container {
-    padding-top: 6rem;
+    padding-top: 4rem;
 }
 
 .about-container {
-    padding-top: 6rem;
+    padding-top: 4rem;
 }
 
 .testimonies-container {
-    padding-top: 6rem;
+    padding-top: 4rem;
 }
 
 .contact-container {
-    padding-top: 6rem;
+    padding-top: 4rem;
 }
 
 .education-container {
-    padding-top: 6rem;
+    padding-top: 4rem;
 }
 
 @keyframes fillBar {
@@ -318,7 +318,7 @@
   opacity: 0;
   transition: .5s ease;
   background-color: #f8f9fa;
-  border-radius: 25px;
+  border-radius: 15px;
 }
 
 .text {
